fixed dark mode background problems

--- a/public/prism-snippet/prism-dark.css
+++ b/public/prism-snippet/prism-dark.css
@@ -32,7 +32,7 @@
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: #2d2d2d;
+     background: #2d2d2d !important;
  }
  
  /* Inline code */
